--- a/oko_project/templates/home.html
+++ b/oko_project/templates/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Bitrix Integration</title>
-    <script src="{% url 'proxy_bx24' %}"></script>
+    <script src="https://api.bitrix24.com/api/v1/"></script>
     <script>
         document.addEventListener("DOMContentLoaded", function() {
             if (typeof BX24 !== 'undefined') {
