--- a/oko_project/templates/home.html
+++ b/oko_project/templates/home.html
@@ -5,6 +5,6 @@
     <title>Bitrix Integration</title>
 </head>
 <body>
-    <h1>Приложение для Bitrix24</h1>
+    <h1>Приложение2 для Bitrix24</h1>
 </body>
 </html>
