--- a/oko_project/bitrix_calc/templates/calculation_list.html
+++ b/oko_project/bitrix_calc/templates/calculation_list.html
@@ -22,6 +22,25 @@
             padding: 20px;
             border-radius: 8px;
             box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            position: relative;
+        }
+
+        .header-button {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            padding: 10px 15px;
+            background-color: #007bff;
+            color: #fff;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 14px;
+            font-weight: bold;
+            transition: background-color 0.3s;
+        }
+
+        .header-button:hover {
+            background-color: #0056b3;
         }
 
         h1 {
@@ -62,6 +81,7 @@
 <body>
 
 <div class="container">
+    <a href="{% url 'calculation_add' %}" class="header-button">Сделать расчет</a>
     <h1>Список калькуляций</h1>
     <table>
         <thead>
@@ -76,7 +96,6 @@
             </tr>
         </thead>
         <tbody>
-            <!-- Пример строк таблицы с рандомными данными -->
             <tr>
                 <td>08.11.2024</td>
                 <td>12345</td>
@@ -104,7 +123,6 @@
                 <td>7500 руб.</td>
                 <td><button class="attach-button">Прикрепить к лиду</button></td>
             </tr>
-            <!-- Добавьте больше строк по аналогии -->
         </tbody>
     </table>
 </div>
